# PixelPilot_rk

./: .gitignore  CMakeLists.txt  README.md  config_osd.json  lv_conf.h  osd-aio.json  osd.json  shell-sim.nix  shell.nix
.github/workflows/: build.yml
.superpowers/brainstorm/35387-1779819694/content/: camera-subpages.html  layout.html  visual-style.html  waiting-1.html  welcome.html
.superpowers/brainstorm/35387-1779819694/state/: server-stopped
debian/: manpage.md  runtime.json
docs/superpowers/plans/: 2026-05-20-stutter-metrics.md  2026-05-21-g2g-latency.md  2026-05-27-fpvd-settings-backend.md  2026-05-27-gsmenu-redesign.md  2026-05-27-lvgl-upgrade.md  2026-05-28-gs-settings-backend.md  2026-05-28-restart-pixelpilot-action.md  2026-06-03-device-gsmenu-integration.md  2026-06-03-gsmenu-pixelpilot-config.md  2026-06-03-pixelpilot-settings-via-fpvd-gs.md  2026-06-04-gsmenu-bandwidth-dl-lock.md  2026-06-07-aiowidget-telemetry-refinements.md  2026-06-07-aiowidget.md  2026-06-07-pixelpilot-menu-osd-reskin.md  2026-06-08-camera-sliders-txpower-lock.md  2026-06-12-drone-reachable-visibility.md  2026-06-12-fpvd-settings-api-update.md  2026-06-16-link-fec-mode.md  2026-06-16-settings-expansion.md  2026-06-20-custom-rtp-receiver.md  2026-06-21-aio-jitter-tile.md  2026-06-21-drone-connection-event.md  2026-06-21-dvr-raw-fps-from-rtp.md  2026-06-21-dvr-reencode-simplify.md  2026-06-21-hot-reload-dvr-colorcorrection-config.md  2026-06-22-dlink-fec-mode-ux.md
docs/superpowers/specs/: 2026-05-20-stutter-metrics-design.md  2026-05-21-g2g-latency-design.md  2026-05-27-fpvd-settings-backend-design.md  2026-05-27-gsmenu-redesign-design.md  2026-05-27-lvgl-upgrade-design.md  2026-05-28-gs-settings-backend-design.md  2026-06-03-device-gsmenu-integration-design.md  2026-06-03-gsmenu-pixelpilot-config-design.md  2026-06-03-pixelpilot-settings-via-fpvd-gs-design.md  2026-06-04-gsmenu-bandwidth-dl-lock-design.md  2026-06-07-aiowidget-design.md  2026-06-07-aiowidget-telemetry-refinements-design.md  2026-06-07-pixelpilot-menu-osd-reskin-design.md  2026-06-08-camera-sliders-txpower-lock-design.md  2026-06-08-gsmenu-dfs-channels-design.md  2026-06-12-drone-reachable-visibility-design.md  2026-06-12-fpvd-settings-api-update-design.md  2026-06-16-link-fec-mode-design.md  2026-06-16-settings-expansion-design.md  2026-06-20-custom-rtp-receiver-design.md  2026-06-21-aio-jitter-tile-design.md  2026-06-21-drone-connection-event-design.md  2026-06-21-dvr-raw-fps-from-rtp-design.md  2026-06-21-dvr-reencode-simplify-design.md  2026-06-21-hot-reload-dvr-colorcorrection-config-design.md  2026-06-22-dlink-fec-mode-ux-design.md
patches/: lvgl-sdl-keyboard.patch
src/: conn_state.c  conn_state.h  drm.h  dvr.cpp  dvr.h  dvr_fps_cap.h  dvr_timing.h  frame_processor.cpp  frame_processor.h  gst_file_player.cpp  gst_file_player.h  gstrtpreceiver.cpp  gstrtpreceiver.h  hevc_depayloader.cpp  hevc_depayloader.h  input.cpp  input.h  latency_probe.cpp  latency_probe.hpp  latency_probe_wire.hpp  main.cpp  main.h  menu.c  minimp4.h  mpp_encoder.cpp  mpp_encoder.h  osd.cpp  osd.h  osd_aio_logic.cpp  osd_aio_logic.hpp  osd_buf.hpp  rtp_jitter.hpp  rtp_video_receiver.cpp  rtp_video_receiver.h  simulator.c  video_codec.h  video_stutter.hpp  wfbcli.cpp
src/gsmenu/: executor.c  executor.h  helper.c  helper.h  osd_air_bridge.c  osd_air_bridge.h  settings.c  settings.h  settings_dummy.c  settings_fpvd.c  settings_fpvd_internal.h  settings_gs_enum.c  settings_gs_enum.h  settings_gs_local.c  settings_gs_local_internal.h  settings_gs_rxpower.c  settings_gs_rxpower.h  settings_gs_writers.c  settings_gs_writers.h  settings_router.c  settings_router_internal.h  settings_runtime_cfg.c  settings_runtime_cfg.h  settings_stub.c  styles.c  styles.h  ui.h  widget_demo.c
src/gsmenu/pages/: camera.c  camera.h  display.c  display.h  dvr.c  dvr.h  dynamiclink.c  dynamiclink.h  link.c  link.h  pixelpilot.c  pixelpilot.h  system.c  system.h
src/gsmenu/widgets/: pp_drilldown.c  pp_drilldown.h  pp_dropdown.c  pp_dropdown.h  pp_footer.c  pp_footer.h  pp_page.c  pp_page.h  pp_row.c  pp_row.h  pp_section_header.c  pp_section_header.h  pp_slider.c  pp_slider.h  pp_slider_accel.c  pp_slider_accel.h  pp_slider_bounds.c  pp_slider_bounds.h  pp_slider_scale.c  pp_slider_scale.h  pp_tabbar.c  pp_tabbar.h  pp_toast.c  pp_toast.h  pp_toggle.c  pp_toggle.h
tests/: fuzz_hevc_depayloader.cpp  osd_stub.cpp  run_latency_tests.sh  standalone_main.cpp  test_aio_logic.cpp  test_conn_state.cpp  test_dvr_fps_cap.cpp  test_dvr_moov_duration.cpp  test_dvr_timing.cpp  test_dynamiclink_page.cpp  test_hevc_depayloader.cpp  test_latency_probe.cpp  test_latency_probe_integration.cpp  test_lvgl_alt_state.cpp  test_osd_buf.cpp  test_page_nav_lock.cpp  test_rtp_jitter.cpp  test_settings.cpp  test_settings_dummy_lock.cpp  test_settings_failure.cpp  test_settings_fpvd.cpp  test_settings_fpvd_integration.cpp  test_settings_gs_enum.cpp  test_settings_gs_rxpower.cpp  test_settings_gs_writers.cpp  test_settings_router.cpp  test_settings_runtime_cfg.cpp  test_slider_accel.cpp  test_slider_bounds.cpp  test_slider_scale.cpp  test_video_stutter.cpp  test_widget_focus.cpp
tools/: gen_hevc_golden.py
